changed column name in dasboard.html

--- a/schoo_enrollment_App/templates/dashboard.html
+++ b/schoo_enrollment_App/templates/dashboard.html
@@ -21,7 +21,7 @@
     <table style="margin-left: 5px;" class="table table-striped mt-5">
         <thead>
         <tr>
-            <th scope="col">Sr.no.</th>
+            <th scope="col">Sr.No.</th>
             <th scope="col">Student Name</th>
             <th scope="col">Email</th>
             <th scope="col">Phone</th>
